bin_SCRIPTS = mbm_xbt \
	mbm_plot \
	mbm_grdplot \
	mbm_grd3dplot \
	mbm_xyplot \
	mbm_stat \
	mbm_grid \
	mbm_grd2arc \
	mbm_arc2grd \
	mbm_grdcut \
	mbm_grdinfo \
	mbm_grdtiff \
	mbm_utm \
	mbm_grd2geovrml \
	mbm_copy \
	mbm_route2mission \
	mbm_makedatalist \
	mbm_histplot \
	mbm_multiprocess \
	mbm_multidatalist \
	mbm_multicopy \
	mbm_bpr
