bin_SCRIPTS = \
	mbm_arc2grd \
	mbm_bpr \
	mbm_copy \
	mbm_grdplot \
	mbm_grd3dplot \
	mbm_grid \
	mbm_grd2arc \
	mbm_grdcut \
	mbm_grdinfo \
	mbm_grdtiff \
	mbm_grd2geovrml \
	mbm_histplot \
	mbm_makedatalist \
	mbm_makesvp \
	mbm_multiprocess \
	mbm_multidatalist \
	mbm_multicopy \
	mbm_route2mission \
	mbm_stat \
	mbm_trnplot \
	mbm_utm \
	mbm_xbt \
	mbm_xyplot
	
