bin_SCRIPTS = \
	mbm_arc2grd \
	mbm_bpr \
	mbm_copy \
	mbm_grdplot \
	mbm_grd3dplot \
	mbm_grd2arc \
	mbm_grdcut \
	mbm_grdinfo \
	mbm_grdtiff \
	mbm_histplot \
	mbm_makesvp \
	mbm_makedatalist \
	mbm_multiprocess \
	mbm_multidatalist \
	mbm_multicopy \
	mbm_phins2fnv \
	mbm_plot \
	mbm_route2mission \
	mbm_stat \
	mbm_trnplot \
	mbm_utm \
	mbm_xbt \
	mbm_xyplot
